[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/Flat-it - BioSans-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Decorative/Crystal/Crystal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TitleScreen/BG.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/TitleScreen/ScoreControl/ScoreControl.gd" type="Script" id=4]
[ext_resource path="res://Scenes/TitleScreen/TextButton.tscn" type="PackedScene" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Animation" id=2]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Crystal:range_height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1.1, 1.1, 1.15, 0.6 ), Color( 1.2, 1.2, 1.35, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Crystal:range_height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1.1, 1.1, 1.15, 0.6 ), Color( 1.2, 1.2, 1.35, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

float grid(vec2 uv, float velocity, float iTime)
{
    vec2 size = vec2(uv.y, uv.y * uv.y * 0.2) * 0.01;
    uv += vec2(0.0, iTime * 4.0 * (velocity + 0.05));
    uv = abs(fract(uv) - 0.5);
 	vec2 lines = smoothstep(size, vec2(0.0), uv);
 	lines += smoothstep(size * 5.0, vec2(0.0), uv) * 0.4 * velocity;
    return clamp(lines.x + lines.y, 0.0, 3.0);
}


void fragment()
{
    vec2 uv = (2.0 * FRAGCOORD.xy.xy - (1.0 / SCREEN_PIXEL_SIZE).xy)/(1.0 / SCREEN_PIXEL_SIZE).y;
    float velocity = 1.0;
   
    {
        // Grid
//        vec3 col = vec3(0.0, 0.1, 0.2);
		vec3 col = texture(SCREEN_TEXTURE, SCREEN_UV).rgb;
        if (uv.y < -0.2)
        {
            uv.y = 3.0 / (abs(uv.y + 0.2) + 0.05);
            uv.x *= uv.y * 1.0;
            float gridVal = grid(uv, velocity, TIME);
            col = mix(col, vec3(0.4, 0.5, 1.3), gridVal);
        }
        else
        {
            uv.y -= velocity * 1.1 - 0.51;
        }

        col = mix(vec3(col.r, col.r, col.r) * 0.5, col,  0.7);

        COLOR = vec4(col,1.0);
    }
      
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 288
outline_size = 3
outline_color = Color( 0.65098, 1, 0.988235, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 144
outline_size = 3
outline_color = Color( 0.65098, 1, 0.988235, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.329412, 1, 0.980392, 1 )

[sub_resource type="DynamicFont" id=9]
size = 144
outline_size = 3
outline_color = Color( 0.65098, 1, 0.988235, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Lights_BG" type="CanvasLayer" parent="."]

[node name="BG" parent="Lights_BG" instance=ExtResource( 3 )]

[node name="Node2D" type="Node2D" parent="Lights_BG"]
scale = Vector2( 1.2, 1.2 )
__meta__ = {
"_edit_group_": true
}

[node name="Crystal" parent="Lights_BG/Node2D" instance=ExtResource( 2 )]
position = Vector2( 1066.67, 213 )

[node name="Crystal" parent="Lights_BG/Node2D/Crystal" index="0"]
energy = 2.0
range_layer_max = 1

[node name="Sprite" parent="Lights_BG/Node2D/Crystal" index="1"]
material = SubResource( 1 )

[node name="AnimationPlayer" parent="Lights_BG/Node2D/Crystal" index="3"]
anims/Hover = SubResource( 2 )

[node name="Crystal2" parent="Lights_BG/Node2D" instance=ExtResource( 2 )]
position = Vector2( 2133.33, 213.333 )

[node name="Crystal" parent="Lights_BG/Node2D/Crystal2" index="0"]
energy = 2.0
range_layer_max = 1

[node name="Sprite" parent="Lights_BG/Node2D/Crystal2" index="1"]
material = SubResource( 1 )

[node name="AnimationPlayer" parent="Lights_BG/Node2D/Crystal2" index="3"]
anims/Hover = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1072.0
margin_top = 56.0
margin_right = 1072.0
margin_bottom = 411.0
rect_pivot_offset = Vector2( 439, 177 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "Level "
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1920.0
margin_top = -663.0
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
margin_right = 3840.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "high score : 000"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 3840.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "score : 000"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultipliersLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1920.0
margin_top = -240.0
margin_right = 1920.0
margin_bottom = -62.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "Multipliers"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -648.25
margin_top = -48.0
margin_right = 648.25
margin_bottom = 338.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1286.5
margin_bottom = 376.0

[node name="MultipliersGridContainer" type="GridContainer" parent="PanelContainer/CenterContainer"]
margin_left = 58.0
margin_right = 1217.0
margin_bottom = 366.0
custom_constants/vseparation = 10
custom_constants/hseparation = 50
columns = 3

[node name="TimeLabel" type="Label" parent="PanelContainer/CenterContainer/MultipliersGridContainer"]
margin_right = 641.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "time:"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimevalueLabel" type="Label" parent="PanelContainer/CenterContainer/MultipliersGridContainer"]
margin_left = 691.0
margin_right = 952.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "000"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeMultiplierLabel" type="Label" parent="PanelContainer/CenterContainer/MultipliersGridContainer"]
margin_left = 1002.0
margin_right = 1159.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "x1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtteptLabel" type="Label" parent="PanelContainer/CenterContainer/MultipliersGridContainer"]
margin_top = 188.0
margin_right = 641.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "Attempt:"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttemptvalueLabel" type="Label" parent="PanelContainer/CenterContainer/MultipliersGridContainer"]
margin_left = 691.0
margin_top = 188.0
margin_right = 952.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "01"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttemptMultiplierLabel" type="Label" parent="PanelContainer/CenterContainer/MultipliersGridContainer"]
margin_left = 1002.0
margin_top = 188.0
margin_right = 1159.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "x1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1920.0
margin_top = 336.0
margin_right = 1920.0
margin_bottom = 514.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "level score : 000"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" parent="." instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1056.0
margin_top = 64.0
margin_right = -96.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 480, 106 )
text = "Next level"
align = 2
valign = 1

[node name="RetryLevelButton2" parent="." instance=ExtResource( 5 )]
margin_left = 104.0
margin_top = 64.0
margin_right = 584.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 240, 106 )
text = "Retry"
align = 0
valign = 1

[node name="TextButton" parent="." instance=ExtResource( 5 )]
margin_left = 3248.0
margin_top = 648.0
margin_right = 3728.0
margin_bottom = 860.0
rect_pivot_offset = Vector2( 240, 106 )
text = "Title"

[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
[connection signal="TextButton_Pressed" from="NextLevelButton" to="." method="_on_NextLevelButton_TextButton_Pressed"]
[connection signal="TextButton_Pressed" from="RetryLevelButton2" to="." method="_on_RetryLevelButton2_TextButton_Pressed"]
[connection signal="TextButton_Pressed" from="TextButton" to="." method="_on_TextButton_TextButton_Pressed"]

[editable path="Lights_BG/Node2D/Crystal"]
[editable path="Lights_BG/Node2D/Crystal2"]
